@@ -3,6 +3,7 @@ WIP
 * General
   - Fixed error in loading a different preset
     while previous preset is in saving process.
+  - Change option name "rF2_process_id" to "process_id".
 
 * Relative Module
   - Fixed index out of range when returning
